resources/deployment/kubernetes-side-car/01_msr-customer-management_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: customer-management
  name: customer-management
spec:
  replicas: 1
  strategy:
      type: RollingUpdate
      rollingUpdate:
        maxSurge: 1
        maxUnavailable: 0
  minReadySeconds: 0
  selector:
    matchLabels:
      app: customer-management
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
      labels:
        app: customer-management
    spec:
      terminationGracePeriodSeconds: 120
      containers:
      - name: customer-management-mcgw
        image: staillansag/webmethods-microgateway:10.15.0.5
        imagePullPolicy: Always
        ports:
        - name: metrics
          containerPort: 9090
        resources:
          requests:
            cpu: 300m
            memory: 300Mi
          limits:
            cpu: 500m
            memory: 500Mi
        livenessProbe:
          tcpSocket:
            port: 9090
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 9090
          initialDelaySeconds: 5
          periodSeconds: 10
      - image: staillansag/msr-customer-management-v2:latest
        imagePullPolicy: Always
        name: customer-management-msr
        ports:
          - name: metrics
            containerPort: 5555
        resources:
          requests:
            cpu: 300m
            memory: 500Mi
          limits:
            cpu: 500m
            memory: 1000Mi
        volumeMounts:
          - mountPath: "/tmp/license"
            name: licenses
            readOnly: true
        livenessProbe:
          tcpSocket:
            port: 5555
          initialDelaySeconds: 180
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 5555
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 24
      volumes:
        - name: licenses
          secret:
            secretName: licenses
