resources/deployment/kubernetes-side-car/02_msr-customer-management_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-management
  labels:
    name: customer-management
spec:
  type: ClusterIP
  ports:
  - port: 443
    targetPort: 9093
  selector:
    app: customer-management
---
apiVersion: v1
kind: Service
metadata:
  name: msr-customer-management
  labels:
    name: msr-customer-management
spec:
  type: ClusterIP
  ports:
  - port: 443
    targetPort: 5543
  selector:
    app: customer-management
  sessionAffinity: ClientIP
