resources/deployment/kubernetes-side-car/99_ingress-msr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-msradmin
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - customers-msradmin.sttlab.eu
    secretName: aks-tls
  rules:
  - host: "customers-msradmin.sttlab.eu"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: msr-customer-management
              port:
                number: 443
